Bug 1383662 - Only dispatch TextZoomChange events if the zoom level has changed. r=Felipe

MozReview-Commit-ID: 8reTfu6R5s3